--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-217.9KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇬🇧 英国-1.22MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-365.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-733.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-560.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-898.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-482.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-215.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-930.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.61MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-492.4KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-339.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-217.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-898.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-482.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-217.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-898.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-482.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-217.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-898.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-482.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-217.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-898.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-482.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-217.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-898.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-482.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-217.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-898.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-482.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-217.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-733.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-898.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-482.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-930.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
