--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-369.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-980.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-516.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇨🇦 加拿大-786.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-2.51MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.50MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇦 加拿大-438.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.76MB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-339.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-705.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-308.8KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.88MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-12.80MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: 87318706-ws.va.huya.com}}
+  - {name: 🇨🇦 加拿大-995.2KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-369.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-980.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-786.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-369.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-980.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-786.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-369.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-980.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-786.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-369.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-980.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-786.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-369.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-980.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-786.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-369.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-980.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-786.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-369.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-980.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.7KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-3.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-786.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-438.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
