--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.35MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-198.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-378.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-995.2KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-333.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-348.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-964.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-370.5KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.38MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-999.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-384.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-450.2KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-370.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-999.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-384.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-450.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
